add city in database buttons

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,9 @@ __pycache__/
 config_variables.py
 # C extensions
 *.so
-
+.mydatabse.db
+.mydatabase_test.db
+.mydatabase_test1.db
 # Distribution / packaging
 .Python
 build/
